取消了重置和确定功能

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	
 	<canvas id="canvas" width='600' height='600'></canvas>
 	<canvas id="canvas2" width='600' height='600'></canvas>
-
+<!-- 
 	<input type="button" class="reset" value="重置">
-	<input type="button" class="regret" value="悔棋">
+	<input type="button" class="regret" value="悔棋"> -->
 </body>
 </html>
